--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /!_OneDrive-2019-06-23/*
 /!_Tile_Assets/*
 /!_Universal-LPC-spritesheet-master/Universal-LPC-spritesheet-master/*
+/aaa.gml
+/aaa.cpp
